crates/ars-components/src/specialized/color_swatch_picker/snapshots/ars_components__specialized__color_swatch_picker__tests__color_swatch_picker_root_focused.snap
---
source: crates/ars-components/src/specialized/color_swatch_picker/mod.rs
expression: "snapshot_attrs(&svc.connect(&|_| {}).root_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "root",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "color-swatch-picker",
            ),
        ),
        (
            Data(
                "ars-state",
            ),
            String(
                "focused",
            ),
        ),
        (
            Aria(
                Label,
            ),
            String(
                "Color swatches",
            ),
        ),
        (
            Id,
            String(
                "csp",
            ),
        ),
        (
            Role,
            String(
                "listbox",
            ),
        ),
    ],
    styles: [],
}
